local_repository(
    name = "rules_cuda",
    path = "../../..",
)

# buildifier: disable=load-on-top
load("@rules_cuda//cuda:repositories.bzl", "cuda_component", "default_components_mapping", "rules_cuda_dependencies", "rules_cuda_toolchains")

rules_cuda_dependencies()

cuda_component(
    name = "cuda_cccl",
    component_name = "cccl",
    sha256 = "9c3145ef01f73e50c0f5fcf923f0899c847f487c529817daa8f8b1a3ecf20925",
    strip_prefix = "cuda_cccl-linux-x86_64-12.6.77-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_cccl/linux-x86_64/cuda_cccl-linux-x86_64-12.6.77-archive.tar.xz"],
)

cuda_component(
    name = "cuda_cudart",
    component_name = "cudart",
    sha256 = "f74689258a60fd9c5bdfa7679458527a55e22442691ba678dcfaeffbf4391ef9",
    strip_prefix = "cuda_cudart-linux-x86_64-12.6.77-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_cudart/linux-x86_64/cuda_cudart-linux-x86_64-12.6.77-archive.tar.xz"],
)

cuda_component(
    name = "cuda_nvcc",
    component_name = "nvcc",
    sha256 = "840deff234d9bef20d6856439c49881cb4f29423b214f9ecd2fa59b7ac323817",
    strip_prefix = "cuda_nvcc-linux-x86_64-12.6.85-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_nvcc/linux-x86_64/cuda_nvcc-linux-x86_64-12.6.85-archive.tar.xz"],
)

# NOTE: this is only usefull when use clang as cuda compiler driver
cuda_component(
    name = "cuda_curand",
    component_name = "curand",
    sha256 = "981339cc86d7b8779e9a3c17e72d8c5e1a8a2d06c24db692eecabed8e746a3c7",
    strip_prefix = "libcurand-linux-x86_64-10.3.7.77-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/libcurand/linux-x86_64/libcurand-linux-x86_64-10.3.7.77-archive.tar.xz"],
)

COMPONENTS = [
    "cccl",
    "cudart",
    "nvcc",
    "curand",
]

rules_cuda_toolchains(
    components_mapping = default_components_mapping(COMPONENTS),
    register_toolchains = True,
    version = "12.6",
)

local_repository(
    name = "rules_cuda_examples",
    path = "../../../examples",
)
