load("@rules_cuda//cuda:repositories.bzl", "cuda_component", "default_components_mapping", "rules_cuda_dependencies", "rules_cuda_toolchains")

local_repository(
    name = "rules_cuda",
    path = "../rules_cuda",
)

rules_cuda_dependencies()

cuda_component(
    name = "local_cuda_cccl",
    component_name = "cccl",
    sha256 = "9c3145ef01f73e50c0f5fcf923f0899c847f487c529817daa8f8b1a3ecf20925",
    strip_prefix = "cuda_cccl-linux-x86_64-12.6.77-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_cccl/linux-x86_64/cuda_cccl-linux-x86_64-12.6.77-archive.tar.xz"],
)

cuda_component(
    name = "local_cuda_cudart",
    component_name = "cudart",
    sha256 = "f74689258a60fd9c5bdfa7679458527a55e22442691ba678dcfaeffbf4391ef9",
    strip_prefix = "cuda_cudart-linux-x86_64-12.6.77-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_cudart/linux-x86_64/cuda_cudart-linux-x86_64-12.6.77-archive.tar.xz"],
)

cuda_component(
    name = "local_cuda_nvcc",
    component_name = "nvcc",
    sha256 = "840deff234d9bef20d6856439c49881cb4f29423b214f9ecd2fa59b7ac323817",
    strip_prefix = "cuda_nvcc-linux-x86_64-12.6.85-archive",
    urls = ["https://developer.download.nvidia.com/compute/cuda/redist/cuda_nvcc/linux-x86_64/cuda_nvcc-linux-x86_64-12.6.85-archive.tar.xz"],
)

COMPONENTS = [
    "cccl",
    "cudart",
    "nvcc",
]

rules_cuda_toolchains(
    components_mapping = default_components_mapping(COMPONENTS),
    version = "12.6",
    register_toolchains = True,
)
